@@ -1,45 +1,7 @@
-/*
- * Copyright 2013 MovingBlocks
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *  http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Engine tests are split out due to otherwise quirky project dependency issues with module tests extending engine tests
 
-/*
- * This is a Gradle build file:
- * - Gradle Homepage: http://gradle.org/
- * - Gradle Documentation: http://gradle.org/documentation
- * - View tasks for this project: $ gradlew tasks
- */
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'checkstyle'
-
-import groovy.json.JsonSlurper
-import org.apache.tools.ant.filters.FixCrLfFilter
-
-import java.text.SimpleDateFormat;
-
-// Declare remote repositories we're interested in - library files will be fetched from here
-repositories {
-    // Main Maven repo
-    mavenCentral()
-    // MovingBlocks Artifactory instance for libs not readily available elsewhere
-    maven {
-        url "http://www.movingblocks.net:8081/artifactory/repo"
-    }
-}
+// Grab all the common stuff like plugins to use, artifact repositories, code analysis config
+apply from: "$rootDir/config/gradle/common.gradle"
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Java Section                                                                                                      //
@@ -84,25 +46,10 @@ task distEngineTests (type: Sync) {
     from jar
 }
 
-// Extra details provided for unit tests
-test {
-    dependsOn rootProject.extractNatives
-
-    // ignoreFailures: Specifies whether the build should break when the verifications performed by this task fail.
-    ignoreFailures = true
-
-    // showStandardStreams: makes the standard streams (err and out) visible at console when running tests
-    testLogging.showStandardStreams = true
-
-    // Arguments to include while running tests
-    jvmArgs '-Xms512m', '-Xmx1024m', '-XX:MaxPermSize=128m'
-}
-
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // General IDE customization                                                                                         //
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-// For IntelliJ add a bunch of excluded directories. Or not so much a bunch in the engine version of this
 idea {
     module {
         // Change around the output a bit
@@ -110,15 +57,4 @@ idea {
         outputDir = file('build/classes')
         testOutputDir = file('build/testClasses')
     }
-}
-
-checkstyle {
-    ignoreFailures = true
-    configFile = new File(rootDir, 'config/checkstyle/checkstyle.xml')
-    configProperties.samedir = checkstyle.configFile.parentFile
-}
-
-pmd {
-    ignoreFailures = true
-    ruleSetFiles = files("config/pmd/pmd.xml")
 }
